[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "libp2p Websocket transport for Wasm apps."
edition = "2021"
license = "MIT"
name = "libp2p-websys-transport"
repository = "https://github.com/vincev/libp2p-websys-transport"
version = "0.1.5"

[dependencies]
futures = "0.3.26"
# For enabling js feature in libp2p dependency.
getrandom = { version = "0.2.3", features = ["js"] }
js-sys = "0.3.61"
libp2p-core = { version = "0.39", default-features = false }
parking_lot = "0.12.1"
send_wrapper = "0.6.0"
thiserror = "1.0.38"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "BinaryType",
  "CloseEvent",
  "MessageEvent",
  "WebSocket",
]
